--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
     "emailjs-com": "^3.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
