--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.19"
